--- a/arch/arm64/configs/m30sdd_defconfig
+++ b/arch/arm64/configs/m30sdd_defconfig
@@ -47,8 +47,8 @@ CONFIG_THREAD_INFO_IN_TASK=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION=""
-CONFIG_LOCALVERSION_AUTO=y
+CONFIG_LOCALVERSION="Dream P Kernel By Ivan2005"
+# CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
 # CONFIG_SYSVIPC is not set
@@ -1091,7 +1091,7 @@ CONFIG_NET_SCH_FIFO=y
 # CONFIG_NET_SWITCHDEV is not set
 # CONFIG_NET_L3_MASTER_DEV is not set
 # CONFIG_NET_NCSI is not set
-CONFIG_KNOX_NCM=y
+# CONFIG_KNOX_NCM is not set
 CONFIG_RPS=y
 CONFIG_RFS_ACCEL=y
 CONFIG_XPS=y
@@ -1363,7 +1363,7 @@ CONFIG_LINK_DEVICE_SHMEM=y
 CONFIG_UMTS_MODEM_SS310AP=y
 # CONFIG_DEBUG_PKTLOG is not set
 # CONFIG_LINK_CONTROL_MSG_IOSM is not set
-CONFIG_CP_SECURE_BOOT=y
+# CONFIG_CP_SECURE_BOOT is not set
 # CONFIG_GPIO_DS_DETECT is not set
 CONFIG_CP_RAM_LOGGING=y
 # CONFIG_CP_UART_NOTI is not set
@@ -1533,15 +1533,15 @@ CONFIG_DM_CRYPT=y
 # CONFIG_DM_DELAY is not set
 CONFIG_DM_UEVENT=y
 # CONFIG_DM_FLAKEY is not set
-CONFIG_DM_VERITY=y
+# CONFIG_DM_VERITY is not set
 # CONFIG_DM_VERITY_HASH_PREFETCH_MIN_SIZE_128 is not set
-CONFIG_DM_VERITY_HASH_PREFETCH_MIN_SIZE=1
-CONFIG_DM_VERITY_FEC=y
+# CONFIG_DM_VERITY_HASH_PREFETCH_MIN_SIZE is not set
+# CONFIG_DM_VERITY_FEC is not set
 # CONFIG_DM_SWITCH is not set
 # CONFIG_DM_LOG_WRITES is not set
 # CONFIG_DM_INTEGRITY is not set
 # CONFIG_DM_VERITY_AVB is not set
-CONFIG_DM_ANDROID_VERITY_AT_MOST_ONCE_DEFAULT_ENABLED=y
+# CONFIG_DM_ANDROID_VERITY_AT_MOST_ONCE_DEFAULT_ENABLED is not set
 # CONFIG_TARGET_CORE is not set
 CONFIG_NETDEVICES=y
 CONFIG_MII=y
@@ -4283,7 +4283,7 @@ CONFIG_PC_ITERATION=5
 CONFIG_EXYNOS_DVFS_MANAGER=y
 CONFIG_EXYNOS_PD=y
 CONFIG_EXYNOS_SECURE_LOG=y
-CONFIG_EXYNOS_KERNEL_PROTECTION=y
+# CONFIG_EXYNOS_KERNEL_PROTECTION is not set
 CONFIG_EXYNOS_SDM=y
 CONFIG_USI_V2=y
 CONFIG_EXYNOS_SMC_LOG_THRESHOLD=0
@@ -4808,7 +4808,7 @@ CONFIG_SENSORS_SSP_PROXIMITY_STK3X3X=y
 # CONFIG_SENSORS_SSP_LIGHT_TCS3701 is not set
 # CONFIG_SENSORS_SSP_BAROMETER_LPS22H is not set
 # CONFIG_SENSORS_SSP_BAROMETER_LPS25H is not set
-CONFIG_FIVE_USE_TZDEV=y
+# CONFIG_FIVE_USE_TZDEV is not set
 CONFIG_SEC_EXT=y
 CONFIG_SEC_REBOOT=y
 
@@ -5416,12 +5416,12 @@ CONFIG_SECURITY_SELINUX_CHECKREQPROT_VALUE=0
 # CONFIG_MFC_CHARGER is not set
 # CONFIG_MST_TEEGRIS is not set
 # CONFIG_MST_LPM_CONTROL is not set
-CONFIG_INTEGRITY=y
+# CONFIG_INTEGRITY is not set
 # CONFIG_INTEGRITY_SIGNATURE is not set
-CONFIG_INTEGRITY_AUDIT=y
+# CONFIG_INTEGRITY_AUDIT is not set
 # CONFIG_IMA is not set
 # CONFIG_EVM is not set
-CONFIG_GAF_V3=y
+# CONFIG_GAF_V3 is not set
 # CONFIG_GAF_V4 is not set
 # CONFIG_GAF_V5 is not set
 # CONFIG_FIVE is not set
