--- a/security/samsung/defex_lsm/Makefile
+++ b/security/samsung/defex_lsm/Makefile
@@ -6,8 +6,7 @@
 PED_ENABLE=true
 SAFEPLACE_ENABLE=true
 ifneq ($(wildcard $(srctree)/include/crypto/internal/rsa.h),)
-    $(warning [DEFEX] INTEGRITY_ENABLE)
-    INTEGRITY_ENABLE=true
+    # INTEGRITY_ENABLE=true
 endif
 
 # caches to enable
